# university_db

./: CMakeLists.txt  data_base_of_students.cpp  data_base_of_students.hpp  db_lib.cpp  db_lib.hpp  main.cpp  student.cpp  student.hpp  testingData.txt
.github/workflows/: module1.yml
test/: catch_amalgamated.hpp  test.cpp
